# mysticeti

./: .editorconfig  .gitignore  .licensesnip  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/agents/: refactor-guardian.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  code.yaml  lint.yaml  releases.yml  updates.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  banner.rs  commands.rs  exporter.rs  lib.rs  main.rs  protocol.rs  remote.rs  report.rs  reporter.rs  table.rs  terminal.rs  tracing.rs
crates/cli/src/commands/: genesis.rs  local_testbed.rs  remote_testbed.rs  run.rs  simulate.rs  testbed.rs
crates/cli/src/remote/: benchmark.rs  protocol.rs  testbed.rs
crates/cli/src/terminal/: banner.rs  progress.rs  render.rs  result.rs  spinner.rs  status.rs  table.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: base.rs  base_committer.rs  builder.rs  committer.rs  leader.rs  lib.rs  protocol.rs  test_util.rs  thresholds.rs  universal_committer.rs  wave.rs
crates/consensus/src/protocols/: mod.rs  mysticeti.rs
crates/consensus/src/tests/: base_committer_tests.rs  multi_committer_tests.rs  pipelined_committer_tests.rs
crates/consensus/tests/: base_committer_tests.rs  blue_bottle_tests.rs  cordial_miners_async_tests.rs  cordial_miners_ps_tests.rs  direct_commit_late_call_tests.rs  direct_commit_partial_round_tests.rs  direct_commit_tests.rs  direct_skip_tests.rs  equivocation_certificate_beats_weak_quorum_tests.rs  fast_commit_tests.rs  fast_missed_slow_commit_tests.rs  fast_missed_weak_indirect_commit_tests.rs  idempotence_tests.rs  indirect_commit_tests.rs  indirect_skip_tests.rs  mahi_mahi_wl4_tests.rs  mahi_mahi_wl5_tests.rs  multi_committer_tests.rs  multiple_direct_commit_tests.rs  mysticeti_tests.rs  nemo_nemo_tests.rs  no_genesis_commit_tests.rs  no_leader_tests.rs  orcaella_tests.rs  pipelined_committer_tests.rs  trailing_skip_not_re_yielded_tests.rs  undecided_tests.rs
crates/consensus/tests/common/: mod.rs
crates/dag/: Cargo.toml
crates/dag/src/: authority.rs  block.rs  block_handler.rs  block_manager.rs  block_store.rs  committee.rs  config.rs  consensus.rs  context.rs  core.rs  core_thread.rs  crypto.rs  data.rs  epoch_close.rs  finalization_interpreter.rs  future_simulator.rs  lib.rs  lock.rs  log.rs  metrics.rs  net_sync.rs  network.rs  simulated_network.rs  simulator.rs  simulator_tracing.rs  storage.rs  sync.rs  syncer.rs  synchronizer.rs  test_util.rs  transactions_generator.rs  types.rs  validator.rs  wal.rs
crates/dag/src/block/: crypto.rs  data.rs  reference.rs  serde.rs  transaction.rs  types.rs
crates/dag/src/consensus/: base_committer.rs  linearizer.rs  mod.rs  universal_committer.rs
crates/dag/src/consensus/tests/: base_committer_tests.rs  multi_committer_tests.rs  pipelined_committer_tests.rs
crates/dag/src/core/: block_handler.rs  block_manager.rs  core_thread.rs  syncer.rs  threshold_clock.rs
crates/dag/src/core_thread/: mod.rs  simulated.rs  spawned.rs
crates/dag/src/crypto/: digest.rs  hash.rs  sign.rs
crates/dag/src/metrics/: aggregate.rs  coarse.rs  histogram.rs  names.rs  precise.rs  result.rs  run_result.rs  server.rs  snapshot.rs  timers.rs
crates/dag/src/runtime/: mod.rs
crates/dag/src/simulator/: context.rs  event_simulator.rs  executor.rs  mod.rs  network.rs  sim_tracing.rs  test_util.rs
crates/dag/src/simulator/tests/: mod.rs  net_sync_tests.rs  syncer_tests.rs
crates/dag/src/storage/: block_store.rs  reader.rs  state.rs  wal.rs
crates/dag/src/sync/: net_sync.rs  network.rs  synchronizer.rs
crates/minibytes/: Cargo.toml
crates/minibytes/src/: bytes.rs  lib.rs  serde.rs
crates/mysticeti/: Cargo.toml
crates/orchestrator/: Cargo.toml  readme.md
crates/orchestrator/assets/: client-parameters.yml  flamegraph.sh  grafana-dashboard.json  install_node_exporter.sh  node-config.json  node-parameters.yml  plot.py  settings-aws-template.yml  settings-custom-template.yml  settings-template.yml
crates/orchestrator/src/: benchmark.rs  collector.rs  error.rs  faults.rs  lib.rs  logs.rs  main.rs  measurements.rs  monitor.rs  orchestrator.rs  protocol.rs  provider.rs  report.rs  session.rs  settings.rs  ssh.rs  testbed.rs
crates/orchestrator/src/client/: aws.rs  mod.rs  vultr.rs
crates/orchestrator/src/orchestrator/: monitoring.rs  prepare.rs  run.rs
crates/orchestrator/src/protocol/: mod.rs  mysticeti.rs
crates/orchestrator/src/provider/: aws.rs  custom.rs
crates/orchestrator/src/ssh/: command.rs  connection.rs
crates/replica/: Cargo.toml
crates/replica/assets/: banner.txt
crates/replica/src/: banner.rs  builder.rs  cli.rs  client.rs  commands.rs  config.rs  generator.rs  lib.rs  main.rs  params.rs  prometheus.rs  replica.rs  result.rs  testbed.rs
crates/replica/src/commands/: genesis.rs  run.rs  simulate.rs  testbed.rs
crates/replica/tests/: commit_consumer.rs  core.rs  smoke.rs  sync.rs
crates/replica/tests/common/: mod.rs
crates/simulator/: Cargo.toml
crates/simulator/examples/: default.yaml  single.yaml  suite.yaml
crates/simulator/src/: config.rs  context.rs  dispatcher.rs  event_simulator.rs  executor.rs  lib.rs  network.rs  params.rs  replica.rs  runner.rs  sim_tracing.rs  test_util.rs  tracing.rs
crates/simulator/src/tests/: mod.rs  net_sync_tests.rs  runner_tests.rs
crates/simulator/tests/: commit_consumer.rs  dag_hydrangea.rs  orcaella.rs  simulation.rs  transaction_client.rs
crates/validator/: Cargo.toml
crates/validator/src/: builder.rs  cli.rs  lib.rs  main.rs  prometheus.rs  tracing.rs  validator.rs
crates/validator/src/commands/: genesis.rs  run.rs  simulate.rs  testbed.rs
crates/validator/tests/: smoke.rs
docs/: architecture.md  orchestrator.md  simulator.md
results/: lmys-0-10-10000.csv  lowlatency-10-50000.csv  lowlatency-4dc-50-10000.csv  lowlatency-50-10000.csv  lowlatency-50-50000.csv  odontoceti-0-50-10000.csv  odontoceti-2-11-10000.csv  odontoceti-2-11-50000.csv  unsafe-10-10000.csv  unsafe-50-10000.csv
scripts/: check.sh  dryrun.sh
(+118 files in other folders)
