[workspace]
resolver = "3"
members = [
  "crates/cli",
  "crates/replica",
  "crates/dag",
  "crates/consensus",
  "crates/orchestrator",
  "crates/minibytes",
  "crates/simulator",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
bincode = "1.3.3"
consensus = { path = "crates/consensus" }
dag = { path = "crates/dag" }
minibytes = { path = "crates/minibytes", default-features = false }
replica = { path = "crates/replica" }
simulator = { path = "crates/simulator" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
indoc = "2.0"
memmap2 = "0.7.0"
parking_lot = "0.12.5"
prometheus = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.33"
tempfile = "3.6.0"
thiserror = "2"
tokio = { version = "1.28.1", features = [
  "sync",
  "time",
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "parking_lot",
  "signal",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2.4"

[profile.release]
panic = "abort"
debug = 1
