[package]
name = "cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "replica"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
dag.workspace = true
consensus.workspace = true
replica.workspace = true
simulator.workspace = true
indicatif = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tabled = "0.12.2"
terminal_size = "0.4.4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = "0.2.2"
