[package]
name = "consensus"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dag.workspace = true
tracing.workspace = true

[dev-dependencies]
dag = { workspace = true, features = ["test-utils"] }
tracing-test.workspace = true

[features]
test-utils = ["dag/test-utils"]
