[package]
name = "dag"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7"
bincode = "1.3.3"
blake2 = "0.10.6"
crc32fast = "1.3.2"
digest = "0.10.6"
ed25519-consensus = "2.1.0"
eyre = { workspace = true }
futures = { workspace = true }
gettid = "0.1.2"
hex = "0.4.3"
libc = "0.2.146"
memmap2 = { workspace = true }
minibytes = { path = "../minibytes", default-features = false, features = [
  "frommmap",
] }
parking_lot = "0.12.1"
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tabled = "0.12.2"
tempfile = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = "0.1.31"
tracing-subscriber = { workspace = true }
zeroize = "1.6.0"

[dev-dependencies]
reqwest = { workspace = true }
seahash = "4.1.0"
tempdir = "0.3.7"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-test = "0.2.4"

[features]
simulator = []
test-utils = ["simulator", "tempfile"]
