# Vendored from Facebook Sapling SCM (MIT licensed):
# https://github.com/facebook/sapling/tree/main/eden/scm/lib/minibytes

[package]
name = "minibytes"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-copy bytes and text types. Vendored from https://github.com/facebook/sapling/tree/main/eden/scm/lib/minibytes"

[dependencies]
bytes = { version = "1.1", features = ["serde"], optional = true }
memmap2 = { version = "0.7.0", optional = true }
serde = { version = "1.0.136", features = ["derive", "rc"] }

[dev-dependencies]
quickcheck = "1.0"

[features]
default = ["frombytes", "frommmap"]
frombytes = ["bytes"]
frommmap = ["memmap2"]
