[package]
name = "orchestrator"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition.workspace = true

[dependencies]
aws-config = "1.5.1"
aws-runtime = "1.2.3"
aws-sdk-ec2 = "1.51.1"
eyre = { workspace = true }
futures = { workspace = true }
glob = "0.3.1"
dag.workspace = true
replica.workspace = true
prometheus-http-query = "0.8"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.88"
serde_with = "3.8.1"
serde_yaml = { workspace = true }
ssh2 = "0.9.4"                    # TODO: remove this dependency
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
