[package]
name = "orchestrator"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition.workspace = true

[dependencies]
aws-config = "1.8.17"
aws-runtime = "1.2.3"
aws-sdk-ec2 = "1.227.0"
eyre = { workspace = true }
futures = { workspace = true }
glob = "0.3.1"
dag.workspace = true
replica.workspace = true
prometheus-http-query = { version = "0.8", default-features = false, features = [
  "rustls-tls",
] }
rand = { workspace = true }
reqwest = { workspace = true }
russh = "0.60"
russh-sftp = "2.1"
serde = { workspace = true }
serde_json = "1.0.150"
serde_with = "3.20.0"
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
