[package]
name = "replica"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8"
blake2 = "0.10.6"
digest = "0.10.6"
eyre = { workspace = true }
dag.workspace = true
consensus.workspace = true
humantime-serde = "1.1"
minibytes = { workspace = true, default-features = false }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dag = { workspace = true, features = ["test-utils"] }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
