[package]
name = "simulator"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dag = { path = "../dag", features = ["test-utils"] }
consensus = { path = "../consensus", features = ["test-utils"] }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
