[package]
name = "simulator"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dag = { workspace = true, features = ["test-utils"] }
consensus = { workspace = true, features = ["test-utils"] }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
