[package]
name = "simulator"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dag = { workspace = true, features = ["test-utils"] }
consensus.workspace = true
replica.workspace = true
eyre = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
simulator = { path = ".", features = ["test-utils"] }
tempfile = { workspace = true }

[features]
test-utils = []
