[package]
name = "validator"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
dag = { path = "../dag" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
