[package]
name = "validator"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7"
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
dag = { path = "../dag" }
consensus = { path = "../consensus" }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
simulator = { path = "../simulator" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
dag = { path = "../dag", features = ["test-utils"] }
consensus = { path = "../consensus", features = ["test-utils"] }
reqwest = { workspace = true }
tempdir = "0.3.7"
tokio = { workspace = true, features = ["test-util"] }
